Fix: add missing documento field and fix service implementation