@@ -6,75 +6,63 @@ import com.s1.Logitrack.mapper.PersonaMapper;
 import com.s1.Logitrack.model.Persona;
 import com.s1.Logitrack.repository.PersonaRepository;
 import com.s1.Logitrack.service.PersonaService;
+import jakarta.persistence.EntityNotFoundException;
+import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
-
 
 @Service
+@RequiredArgsConstructor
 public class PersonaServiceImpl implements PersonaService {
 
     private final PersonaRepository personaRepository;
-    private final PersonaMapper personaMapper = new PersonaMapper();
-
-    public PersonaServiceImpl(PersonaRepository personaRepository) {
-        this.personaRepository = personaRepository;
-    }
+    private final PersonaMapper personaMapper;
 
     @Override
     public PersonaResponseDTO guardarPersona(PersonaRequestDTO dto) {
-
-        Persona persona = personaMapper.DTOAEntidad(dto);
-
-        Persona guardada = personaRepository.save(persona);
-
+        Persona p = personaMapper.DTOAEntidad(dto);
+        Persona guardada = personaRepository.save(p);
         return personaMapper.entidadADTO(guardada);
     }
 
     @Override
     public PersonaResponseDTO actualizarPersona(PersonaRequestDTO dto, Long id) {
-
-        Persona persona = personaRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Persona no encontrada"));
-
-        personaMapper.actualizarEntidadDesdeDTO(persona, dto);
-
-        Persona actualizada = personaRepository.save(persona);
-
+        Persona p = personaRepository.findById(id)
+                .orElseThrow(() -> new EntityNotFoundException("No existe la persona con id: " + id));
+        personaMapper.actualizarEntidadDesdeDTO(p, dto);
+        Persona actualizada = personaRepository.save(p);
         return personaMapper.entidadADTO(actualizada);
     }
 
     @Override
-    public List<PersonaResponseDTO> listarPersonas() {
-
-        return personaRepository.findAll()
-                .stream()
-                .map(personaMapper::entidadADTO)
-                .collect(Collectors.toList());
+    public void eliminarPersona(Long id) {
+        Persona p = personaRepository.findById(id)
+                .orElseThrow(() -> new EntityNotFoundException("No existe la persona con id: " + id));
+        personaRepository.delete(p);
     }
 
     @Override
-    public List<PersonaResponseDTO> buscarMayorQueEdad(Integer edad) {
-
-        return personaRepository.findByEdadGreaterThan(edad)
+    public List<PersonaResponseDTO> listarPersonas() {
+        return personaRepository.findAll()
                 .stream()
                 .map(personaMapper::entidadADTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public PersonaResponseDTO buscarPorId(Long id) {
-
-        Persona persona = personaRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Persona no encontrada"));
-
-        return personaMapper.entidadADTO(persona);
+        Persona p = personaRepository.findById(id)
+                .orElseThrow(() -> new EntityNotFoundException("No existe la persona con id: " + id));
+        return personaMapper.entidadADTO(p);
     }
 
     @Override
-    public void eliminarPersona(Long id) {
-
-        personaRepository.deleteById(id);
+    public List<PersonaResponseDTO> buscarMayorQueEdad(Integer edad) {
+        return personaRepository.findByEdadGreaterThan(edad)
+                .stream()
+                .map(personaMapper::entidadADTO)
+                .toList();
     }
+
 }
